Bug 387054 - Bad columns width in audio cd and mixed mode cd projects
Summary: Bad columns width in audio cd and mixed mode cd projects
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: GUI/Usability (other bugs)
Version First Reported In: 17.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-18 04:52 UTC by Patrick Silva
Modified: 2017-11-22 04:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bad columns (99.56 KB, image/png)
2017-11-18 04:52 UTC, Patrick Silva
Details
good columns (100.36 KB, image/png)
2017-11-18 04:53 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-11-18 04:52:49 UTC
Created attachment 108936 [details]
bad columns

Testing 17.12 beta on Arch Linux, this bug affects both audio cd and mixed mode cd projects

start k3b and create any affected project
my screenshot shows bad columns width
close your project and create it again
my second screenshot shows good columns width
Comment 1 Patrick Silva 2017-11-18 04:53:48 UTC
Created attachment 108937 [details]
good columns
Comment 2 Leslie Zhai 2017-11-22 04:28:43 UTC
Git commit f8ea41d2b26ceaa8c04d0d241e343c459f47347f by Leslie Zhai.
Committed on 22/11/2017 at 04:27.
Pushed by lesliezhai into branch 'master'.

Add UpdateLater event for ViewColumnAdjuster.

M  +3    -3    src/k3bviewcolumnadjuster.cpp

https://commits.kde.org/k3b/f8ea41d2b26ceaa8c04d0d241e343c459f47347f