Add UpdateLater event for ViewColumnAdjuster.

BUG: 387054